<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading">Glide - Image Loading Library by Bump Tech</string>
    <string name="load_app">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File name:</string>
    <string name="files_status">Status:</string>
    <string name="ok">Ok</string>
    <string name="downloaded">Downloaded</string>
    <string name="check_details">Check Details</string>
    <string name="check_status">Check Status</string>
    <string name="download_notification_channel_id">channelId</string>
    <string name="file_name_label">File name label</string>
    <string name="file_status_label">File status label</string>

</resources>
