<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/loading_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_header">

        <RadioButton
            android:id="@+id/radio_button_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.RadioButton"
            android:text="@string/glide_image_loading" />

        <RadioButton
            android:id="@+id/radio_button_udacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.RadioButton"
            android:text="@string/load_app" />

        <RadioButton
            android:id="@+id/radio_button_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.RadioButton"
            android:text="@string/retrofit" />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/loading_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:primaryBackgroundColor="@color/colorPrimary"
        app:loadingBarColor="@color/colorPrimaryDark"
        app:circularProgressColor="@color/colorAccent"
        app:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>